--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,64 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
+    <ImageButton
+        android:id="@+id/ib_menuButton"
+        android:layout_width="wrap_content"
+        android:src="@drawable/menu_icon"
+        android:layout_marginTop="13dp"
+        android:layout_marginLeft="5dp"
+        android:background="@null"
+        android:padding="5dp"
+        android:layout_height="wrap_content"/>
+
+
+    <ImageButton
+        android:id="@+id/ib_plusButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        android:background="@null"
+        android:src="@drawable/plus_icon"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="13dp"
+        android:layout_marginRight="5dp"/>
+
+    <TextView
+        android:id="@+id/tv_locationName"
+        android:layout_toRightOf="@id/ib_menuButton"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:gravity="center_horizontal"
+        android:layout_height="wrap_content"
+        android:layout_toLeftOf="@id/ib_plusButton"
+        android:layout_marginRight="20dp"
+        android:text="Bratislava - Letisko a este nejaky velmi dlhy nazov ktory pretecie"
+        android:textColor="@color/white"
+        android:layout_centerHorizontal="true"
+        android:textStyle="bold"
+        android:textSize="14sp"/>
+
+
+
+
+
+    <ImageView
+        android:layout_marginTop="60dp"
+        android:layout_below="@id/tv_locationName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/dayline"/>
+
+
+
+
+
     <com.github.mikephil.charting.charts.CombinedChart
+        android:layout_marginTop="200dp"
+        android:visibility="invisible"
         android:id="@+id/combinedChart"
         android:layout_width="match_parent"
         android:layout_height="400dp" />
