--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#519977</color>
+    <color name="colorPrimaryDark">#519977</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorBackground">#6D5FE4</color>
+    <color name="colorBackground">#519977</color>
+
+    <item name="white" type="color">#FFFFFFFF</item>
+
+    <integer-array name="androidcolors">
+        <item>@color/white</item>
+    </integer-array>
+
+
 </resources>
