--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -395,6 +395,6 @@
             android:layout_width="match_parent"
             android:layout_height="400dp"
             android:layout_marginTop="900dp"
-            android:visibility="gone"/>
+            android:visibility="visible"/>
     </RelativeLayout>
 </ScrollView>
